# SoulDoc

./: .env.example  Cargo.toml  bootstrap_ai.sh  build.sh  history.txt  vectors.md
.github/workflows/: deploy.yml
deploy/server/: deploy_soulbook.sh
docs/superpowers/plans/: 2026-04-30-soulauth-oidc-integration.md
schemas/: all_tables_schemaless.surql  docs_schema.sql  docs_schema_v3.sql  missing_tables.surql
src/: config.rs  main.rs
src/agent/: router.rs
src/models/: document.rs  file.rs  notification.rs  permission.rs  publication.rs  search.rs  space.rs  space_member.rs  tag.rs  version.rs
src/routes/: ai_tasks.rs  auth.rs  auth_gateway.rs  change_requests.rs  comments.rs  developer.rs  documents.rs  files.rs  git_sync.rs  google_oauth.rs  language.rs  local_auth.rs  mod.rs  notifications.rs  publication.rs  publish.rs  search.rs  settings.rs  soulauth_oidc.rs  space_members.rs  spaces.rs  stats.rs  tags.rs  templates.rs  tool_configs.rs  vectors.rs  versions.rs
src/services/: auth.rs  comments.rs  database.rs  documents.rs  file_upload.rs  notification.rs  publication.rs  search.rs  space_member.rs  spaces.rs  tags.rs  versions.rs
src/utils/: auth.rs  installer.rs
