[package]
name = "rainbow-docs"
version = "0.1.0"
edition = "2021"
authors = ["Rainbow Hub Team"]
description = "A GitBook-like documentation system built with Rust and Axum"
license = "MIT"

[dependencies]
# Web 框架 (与Rainbow-Auth相同版本)
axum = { version = "0.6", features = ["headers", "multipart"] }
tower-http = { version = "0.4", features = ["cors"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tokio = { version = "1.28", features = ["full"] }

# 数据库 (与Rainbow-Auth相同版本)
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
surrealdb = { version = "3.0.0", features = ["protocol-http"] }
# 使用soulcore替代直接的数据库操作
soulcore = { path = "../soulcore", default-features = false, features = ["storage", "surrealdb-http"] }

# 认证相关 (与Rainbow-Auth相同版本，用于JWT验证)
jsonwebtoken = "8.3"
argon2 = "0.5"

# 序列化/反序列化 (与Rainbow-Auth相同版本)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理 (与Rainbow-Auth相同版本)
thiserror = "1.0"
anyhow = "1.0"

# 日志和配置 (与Rainbow-Auth相同版本)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.13"

# 时间处理 (与Rainbow-Auth相同版本)
chrono = { version = "0.4", features = ["serde"] }

# 工具库 (与Rainbow-Auth相同版本)
uuid = { version = "1.3", features = ["v4", "serde"] }
validator = { version = "0.16", features = ["derive"] }
async-trait = "0.1"
dotenv = "0.15"
lazy_static = "1.4"

# 加密和哈希 (与Rainbow-Auth相同版本)
sha2 = "0.10"

# URL 编码 (与Rainbow-Auth相同版本)
urlencoding = "2.1"
serde_urlencoded = "0.7"

# Markdown & 文档处理 (文档系统专用)
pulldown-cmark = "0.9"
comrak = { version = "0.19", features = ["syntect"] }
syntect = "5.0"
regex = "1.0"
slug = "0.1"

# 文件处理
mime_guess = "2.0"
tokio-util = { version = "0.7", features = ["io"] }
image = { version = "0.24", features = ["jpeg", "png", "gif", "webp"] }

# PDF 导出 (可选)
wkhtmltopdf = { version = "0.4", optional = true }

# 邮件通知 (与Rainbow-Auth相同版本)
lettre = { version = "0.10", features = ["builder", "smtp-transport", "tokio1-native-tls"], optional = true }

[features]
default = ["notifications"]
installer = []
pdf-export = ["wkhtmltopdf"]
notifications = ["lettre"]

[dev-dependencies]
tokio-test = "0.4"
